issue w horizontal scrollbar after testing on PC

--- a/app/bt.css
+++ b/app/bt.css
@@ -442,7 +442,7 @@ body {
     padding-right: 0px;
     border-radius: 0px;
     cursor: pointer;
-    right: 0px;
+    right: 2px;
     height: calc(var(--btRowHeight) - 2px);
 }
 .rowButton {
